# GNN-Building-Energy-Forecasting

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  ashrae-start-here-a-gentle-introduction.ipynb  config.json  electricity-meter-reading-display.ipynb  extract_metrics.py  gpu_test.py  info.md  main.py  origin_true_lightgbm_baseline.py  pyproject.toml
Ablation experiment/STGNN/: static_adaptive_stgnn_other_meters_ablation.py  stgnn_electricity_ablation.py
GRU/: gru_baseline_auto-rolling.py  gru_other_meters_auto-rolling.py
GRU/gru_baseline_auto-rolling_outputs/: gru_final_model.pt  gru_model_params.json  gru_run_summary.json  gru_test_metrics.json  gru_training_history.csv  gru_validation_metrics.json
Ridge Regression/: ridge_regression_baseline.py
STGNN/: static_adaptive_graph.py  static_adaptive_stgnn_other_meters_auto-rolling.py  stgnn_gcn_gru_auto-rolling.py  stgnn_other_meters_gcn_gru_auto-rolling.py
TCN/: tcn_baseline.py
XGBoost/: xgboost_baseline.py  xgboost_baseline_log1p-minmax _backup.py  xgboost_baseline_log1p-minmax.py  xgboost_other_meters_log1p-minmax.py
data_preprocess/: data_log1p_minmax.py  data_other_meters_log1p_minmax.py  data_preprocess.py  data_screening.py
src/XGBoost/: README.md  (+9 more)
test/: test_data_other_meters_log1p_minmax.py  test_gru_other_meters_auto_rolling.py  test_historical_profile_log1p_minmax.py  test_raw_test_metrics.py  test_screened_data.py  test_static_adaptive_zero_inflated.py  test_stgnn_other_meters_gcn_gru_auto_rolling.py  test_xgboost_other_meters_log1p_minmax.py
tests/: test_xgboost_metrics.py
web/: app.py
(+357 files in other folders)
