[project]
name = "gnn-building-energy-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy<2.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch==2.2.2",
    "torch-geometric>=2.7.0",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
]
